--- a/sugrdady/style.css
+++ b/sugrdady/style.css
@@ -46,7 +46,7 @@
 
 body {
     background-color: #8ec5fc;
-    background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+    background-image: linear-gradient(62deg, #8ec5fc 0%, #00246b 100%);
 
     .section {
         background: rgb(249, 250, 252);
